// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSortedArray should generate array and return sorted array by lastChangeBid 1`] = `
Array [
  Object {
    "bestAsk": 107.25199883791178,
    "bestBid": 106.7297012204255,
    "lastChangeAsk": -4.862314256927661,
    "lastChangeBid": -10,
    "name": "usdeur",
    "openAsk": 109.78172867376465,
    "openBid": 107.22827132623534,
  },
  Object {
    "bestAsk": 107.25199883791178,
    "bestBid": 106.7297012204255,
    "lastChangeAsk": -4.862314256927661,
    "lastChangeBid": 1,
    "name": "euraud",
    "openAsk": 109.78172867376465,
    "openBid": 107.22827132623534,
  },
  Object {
    "bestAsk": 107.25199883791178,
    "bestBid": 106.7297012204255,
    "lastChangeAsk": -4.862314256927661,
    "lastChangeBid": 2,
    "name": "usdjpy",
    "openAsk": 109.78172867376465,
    "openBid": 107.22827132623534,
  },
]
`;

exports[`updateCurrencyPairsMidPrices calls first time 1`] = `
Object {
  "usdjpy": Array [
    Object {
      "midPrice": 3,
      "time": 132345321,
    },
  ],
}
`;

exports[`updateCurrencyPairsMidPrices filter the array for last 30 seconds 1`] = `
Object {
  "usdjpy": Array [
    Object {
      "midPrice": 9,
      "time": 1522516452157,
    },
  ],
}
`;

exports[`updateCurrencyPairsMidPrices update the array of same company 1`] = `
Object {
  "usdjpy": Array [
    Object {
      "midPrice": 3,
      "time": 1522516237111,
    },
    Object {
      "midPrice": 9,
      "time": 1522516227135,
    },
  ],
}
`;
